--- a/src/main/resources/static/css/myStyle.css
+++ b/src/main/resources/static/css/myStyle.css
@@ -13,7 +13,7 @@ body {
     position:relative;
 }
 #header {
-    background: black;
+    background: #343A40;
     padding:10px;
 }
 #content {
@@ -22,7 +22,7 @@ body {
     /*padding: 16px;*/
 }
 #footer {
-    background:black;
+    background:#343A40;
     color: white;
     width:100%;
     height:100px;
