finished permits display

--- a/src/main/resources/static/css/myStyle.css
+++ b/src/main/resources/static/css/myStyle.css
@@ -38,3 +38,7 @@ body {
 .successful{
     color: green
 }
+
+.table-hover tbody tr:hover td, .table-hover tbody tr:hover th {
+    background-color: lightgreen;
+}
